make console host dynamic

--- a/automation/index.html
+++ b/automation/index.html
@@ -114,7 +114,7 @@ layout: base
             and get your team on board.
           </p>
           <a id="get_in_touch" class="cta js-intercom-show button orange margin-bottom-2">Get in touch</a>
-          <p>Or <a href="https://console.convox.com/grid/signup">sign up</a> to get started.</p>
+          <p>Or <a href="https://{{ site.console_host }}/grid/signup">sign up</a> to get started.</p>
         </div>
       </div>
     </div>
