--- a/pci/index.html
+++ b/pci/index.html
@@ -22,7 +22,7 @@ layout: base
           <p>Run the Convox PAAS in your own account.</p>
           <p class="margin-bottom-3">Just add your apps and data.</p>
           <a id="get_in_touch" class="cta js-intercom-show button margin-bottom-2">Get in touch</a>
-          <p>Or <a href="https://console.convox.com/grid/signup">sign up</a> to get started.</p>
+          <p>Or <a href="https://{{ site.console_host }}/grid/signup">sign up</a> to get started.</p>
         </div>
       </div>
     </div>
