--- a/reinvent/index.html
+++ b/reinvent/index.html
@@ -20,7 +20,7 @@ layout: base
           <h2 class="margin-bottom-3">Amazon announced 200 features this week.</h2>
           <p class="margin-bottom-2">Need help keeping up?</p>
           <a id="get_in_touch" class="cta js-intercom-show button margin-bottom-2">Get in touch</a>
-          <p>Or <a href="https://console.convox.com/grid/signup">sign up</a> to get started.</p>
+          <p>Or <a href="https://{{ site.console_host }}/grid/signup">sign up</a> to get started.</p>
         </div>
       </div>
     </div>
