fix signup links

--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -62,7 +62,7 @@ layout: base
           <h2 class="margin-top-0 margin-bottom-2">End your search.</h2>
           <p>Choosing Convox will save your team months of building management tools.</p>
           <p>You can also <a href="#" class="cta js-intercom-show">get in touch</a> to learn about a full range of professional services to accelerate your evaluation and migration.</p>
-          <a href="/signup" class="cta button orange brighten margin-top-0">Get Started Now</a>
+          <a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten margin-top-0">Get Started Now</a>
         </div>
       </div>
     </div>
