--- a/how/index.html
+++ b/how/index.html
@@ -13,7 +13,7 @@ layout: base
     </div>
     <div class="row">
       <div class="actions col-xs-12">
-        <a href="/signup" class="button orange brighten shadow">Get Started For Free</a>
+        <a href="https://{{ site.console_host }}/grid/signup" class="button orange brighten shadow">Get Started For Free</a>
       </div>
     </div>
   </div>
@@ -203,7 +203,7 @@ layout: base
       <div class="row">
         <div class="col-xs-12 text-center">
           <h2 class="margin-top-0 margin-bottom-2">Try it for yourself.</h2>
-          <a href="/signup" class="cta button orange brighten margin-top-0">Get Started Now</a>
+          <a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten margin-top-0">Get Started Now</a>
         </div>
       </div>
     </div>
