--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Convox
     <div class="row">
       <div class="actions col-xs-12">
         <a href="//vimeo.com/190645705" data-lity class="button hollow shadow">See How It Works</a>
-        <a href="/signup" class="button orange brighten shadow">Get Started For Free</a>
+        <a href="https://{{ site.console_host }}/grid/signup" class="button orange brighten shadow">Get Started For Free</a>
       </div>
     </div>
 
@@ -183,7 +183,7 @@ title: Convox
           <p>Get automatic health checks, failovers, and alerts.</p>
           <p>Receive top-notch support from engineers who know the system.</p>
         </div>
-        <a href="/signup" class="cta button orange brighten">Get Started Now</a>
+        <a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten">Get Started Now</a>
       </div>
     </div>
   </div>
