--- a/pricing/index.html
+++ b/pricing/index.html
@@ -31,9 +31,9 @@ layout: base
           <tfoot>
             <tr>
               <td></td>
-              <td><a href="/signup" class="cta button orange brighten">Get Started</a></td>
-              <td><a href="/signup" class="cta button orange brighten">Get Started</a></td>
-              <td><a href="/signup" class="cta button orange brighten">Get Started</a></td>
+              <td><a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten">Get Started</a></td>
+              <td><a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten">Get Started</a></td>
+              <td><a href="https://{{ site.console_host }}/grid/signup" class="cta button orange brighten">Get Started</a></td>
               <td><a href="mailto:sales@convox.com?subject=Convox Enterprise" class="cta js-intercom-show button orange brighten">Get Quote</a></td>
             </tr>
           </tfoot>
