--- a/pricing/index.html
+++ b/pricing/index.html
@@ -39,13 +39,6 @@ layout: base
           </tfoot>
           <tbody>
             <tr>
-              <th>Maximum Users</th>
-              <td>1</td>
-              <td style="padding-top:4px; padding-bottom:2px;"><span class="infinite">&infin;</span></td>
-              <td style="padding-top:4px; padding-bottom:2px;"><span class="infinite">&infin;</span></td>
-              <td style="padding-top:4px; padding-bottom:2px;"><span class="infinite">&infin;</span></td>
-            </tr>
-            <tr>
               <th>Maximum Racks</th>
               <td>1</td>
               <td style="padding-top:4px; padding-bottom:2px;"><span class="infinite">&infin;</span></td>
@@ -133,11 +126,26 @@ layout: base
               <td></td>
               <td><span class="has-feature fa fa-check"></span></td>
             </tr>
-            <tr class="price">
-              <th></th>
-              <td>Free</td>
-              <td><div class="per-user">$59</div><div class="per-month">per month</div></td>
-              <td><div class="per-user">$129</div><div class="per-month">per month</div></td>
+            <tr class="separator"><td colspan=5></td></tr>
+            <tr>
+              <th>Base Price</td>
+              <td><strong>Free</strong></td>
+              <td><strong>$99</strong>/mo</td>
+              <td><strong>$499</strong>/mo</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>Included Users</td>
+              <td>1</td>
+              <td>3</td>
+              <td>5</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>Additional Users</td>
+              <td><i class="fa fa-ban"></i></td>
+              <td><strong>$39</strong>/mo</td>
+              <td><strong>$99</strong>/mo</td>
               <td></td>
             </tr>
           </tbody>
